# designpatternexamples

./: .gitignore  Adapter_BackEndFunctions.cs  Bridge_ConsoleLogger.cs  Bridge_FIleLogger.cs  Bridge_Logger.cs  Bridge_LoggerHelpers.cs  Bridge_LoggerInterface.cs  Bridge_NullLogger.cs  CMakeLists.txt  CODEOWNERS  Cargo.toml  Command.cs  Composite_FileAccess.cs  Composite_FileDirEntry.cs  Composite_IFileDirEntry.cs  Decorator_Classes.cs  Design Pattern Examples Notes.odt  DesignPatternExamples.csproj  DesignPatternExamples.sln  Facade_ComplicatedSubSystem.cs  Facade_Interfaces.cs  HandlerChain_Message_Class.cs  Interpreter_Class.cs  IteratorContainer_Class.cs  LICENSE.md  Null_Object.cs  ObserverSubject_NumberProducer.cs  Observer_Class.cs  Program.cs  README.md  State_Class.cs  Strategy_ShowEntries_Class.cs  Strategy_SortEntries_Classes.cs  Templates.cs  Visitor_Element_Classes.cs  Visitor_Visitor_Class.cs  c_add_exercise_files.py  copyfile_if_exists.cmake  cpp_add_exercise_files.py  python_add_exercise_files.py  (+1 more)
Adapter_BackEnd/: Adapter_BackEnd.c  Adapter_BackEnd.h  Adapter_BackEnd.rc  Adapter_BackEnd.vcxproj  Adapter_BackEnd.vcxproj.filters  CMakeLists.txt  dllmain.c  framework.h  pch.c  pch.h  resource.h  version.h.in
CreateDocs/: CMakeLists.txt  CreateDocs.vcxproj  CreateDocs.vcxproj.filters  Doxyfile  explain.css
c/: Adapter_BackEndFunctions.c  Adapter_BackEndFunctions.h  Adapter_Exercise.c  Adapter_Exercise.h  Adapter_Functions.c  Adapter_Functions.h  Bridge_ConsoleLogger.c  Bridge_ConsoleLogger.h  Bridge_Exercise.c  Bridge_Exercise.h  Bridge_FileLogger.c  Bridge_FileLogger.h  Bridge_ILogger.c  Bridge_ILogger.h  Bridge_LogHelper.c  Bridge_LogHelper.h  Bridge_NullLogger.c  Bridge_NullLogger.h  CMakeLists.txt  Command_Command.c  Command_Command.h  Command_Exercise.c  Command_Exercise.h  Command_TextObject.c  Command_TextObject.h  Composite_Exercise.c  Composite_Exercise.h  Composite_FileAccess.c  Composite_FileAccess.h  Composite_FileDirEntry.c  Composite_FileDirEntry.h  Decorator_Exercise.c  Decorator_Exercise.h  DesignPatternExamples_c.vcxproj  DesignPatternExamples_c.vcxproj.filters  Facade_ComplexSystem.c  Facade_ComplexSystem.h  Facade_Exercise.c  Facade_Exercise.h  Facade_Interface.c  (+90 more)
c/helpers/: _countof.h  checkforkey.c  checkforkey.h  conststringlist.c  conststringlist.h  cursor.c  cursor.h  datetime.c  datetime.h  dynamicstring.c  dynamicstring.h  enablevtmode.c  enablevtmode.h  formatstring.c  formatstring.h  makelocaltime.c  makelocaltime.h  mapofint.c  mapofint.h  mapofstrings.c  mapofstrings.h  mutex.c  mutex.h  readkey.c  readkey.h  replace.c  replace.h  sleep.c  sleep.h  split.c  split.h  stack.c  stack.h  strdup.h  stringlist.c  stringlist.h  strstri.c  strstri.h  titlecase.c  titlecase.h  (+4 more)
cplusplus/: Adapter.h  Adapter_BackEndFunctions.cpp  Adapter_BackEndFunctions.h  Adapter_Exercise.cpp  Adapter_Exercise.h  Adapter_FrontEndClass.cpp  Adapter_FrontEndClass.h  Bridge_ConsoleLogger.cpp  Bridge_ConsoleLogger.h  Bridge_Exercise.cpp  Bridge_Exercise.h  Bridge_FileLogger.cpp  Bridge_FileLogger.h  Bridge_Logger.cpp  Bridge_Logger.h  Bridge_LoggerHelpers.cpp  Bridge_LoggerHelpers.h  Bridge_LoggerInterface.h  Bridge_NullLogger.cpp  Bridge_NullLogger.h  CMakeLists.txt  Command_Classes.h  Command_Exercise.cpp  Command_Exercise.h  Composite_Exercise.cpp  Composite_Exercise.h  Composite_FileAccess.cpp  Composite_FileAccess.h  Composite_FileDirEntry.h  Composite_IFileEntry.h  Decorator_Classes.h  Decorator_Exercise.cpp  Decorator_Exercise.h  DesignPatternExamples_cplusplus.vcxproj  DesignPatternExamples_cplusplus.vcxproj.filters  FacadeSubsystem_Interface.h  Facade_ComplicatedSubSystem.cpp  Facade_Exercise.cpp  Facade_Exercise.h  Facade_Interface.cpp  (+61 more)
cplusplus/helpers/: DateTime.cpp  DateTime.h  argumentinvalid_error.h  argumentnull_error.h  checkforkey.cpp  checkforkey.h  cursor.cpp  cursor.h  enablevtmode.cpp  enablevtmode.h  formatstring.cpp  formatstring.h  makelocaltime.cpp  makelocaltime.h  mapofstrings.h  readkey.cpp  readkey.h  replace.cpp  replace.h  replacew.cpp  sleep.cpp  sleep.h  split.cpp  split.h  splitw.cpp  stricmp.cpp  stricmp.h  stringlist.h  strstri.cpp  strstri.h  titlecase.cpp  titlecase.h  uint32_to_binary.cpp  uint32_to_binary.h  wcsstri.cpp  wcsstri.h
csharp/: Adapter_BackEndFunctions.cs  Adapter_Exercise.cs  Adapter_FrontEndClass.cs  App.config  Bridge_ConsoleLogger.cs  Bridge_Exercise.cs  Bridge_FIleLogger.cs  Bridge_Logger.cs  Bridge_LoggerHelpers.cs  Bridge_LoggerInterface.cs  Bridge_NullLogger.cs  CMakeLists.txt  Command.cs  Command_Exercise.cs  Composite_Exercise.cs  Composite_FileAccess.cs  Composite_FileDirEntry.cs  Composite_IFileDirEntry.cs  Decorator_Classes.cs  Decorator_Exercise.cs  DesignPatternExamples_csharp.csproj  DesignPatternExamples_csharp.csproj.in  EnableVTModeForWindowsConsole.cs  Facade_ComplicatedSubSystem.cs  Facade_Exercise.cs  Facade_Interfaces.cs  Flyweight_Class.cs  Flyweight_Exercise.cs  HandlerChain_Class.cs  HandlerChain_Exercise.cs  HandlerChain_MessageWindow_Class.cs  HandlerChain_Message_Class.cs  Interpreter_Class.cs  Interpreter_Exercise.cs  IteratorContainer_Class.cs  Iterator_Exercise.cs  Mediator_Class.cs  Mediator_Exercise.cs  Mediator_Group_Classes.cs  Mediator_User_Classes.cs  (+21 more)
csharp/Properties/: AssemblyInfo.cs
csharp/archive/: Bridge_Logger.cs  Facade_Class.cs  Facade_ComplicatedSubSystem.cs  Facade_ComplicatedSubSystemInterfaces.cs  Strategy_Class.cs  Strategy_DisplayEntries_Classes.cs  Strategy_FetchEntries_Classes.cs  Strategy_SortEntries_Classes.cs
rust/design_pattern_examples_rust/: Cargo.toml  build.rs  design_pattern_examples_rust.vcxproj  design_pattern_examples_rust.vcxproj.filters
rust/design_pattern_examples_rust/src/: adapter.rs  bridge.rs  command.rs  composite.rs  decorator.rs  facade.rs  flyweight.rs  handlerchain.rs  helpers.rs  interpreter.rs  iterator.rs  main.rs  mediator.rs  memento.rs  nullobject.rs  observer.rs  proxy.rs  state.rs  strategy.rs  visitor.rs
rust/design_pattern_examples_rust/src/adapter/: adapter_backend.rs  adapter_functions.rs  back_end_functions.rs
(+195 files in other folders)
