[package]
name = "design_pattern_examples_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.21", features = ["formatting", "local-offset", "macros"] }
rand = {version = "0.8.5" }
winconsole = { version = "0.11.1", features = ["input"] }
